{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 137,
  "lineage": "d2adc6f7-cbf3-9ecb-f21e-446e30f072e1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-12-11T04:52:38.997-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projetsparkantoineloic/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/networks/custom-vpc",
            "params": [],
            "priority": 1000,
            "project": "projetsparkantoineloic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-11T04:52:38.916-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/projetsparkantoineloic/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/networks/custom-vpc",
            "params": [],
            "priority": 1000,
            "project": "projetsparkantoineloic",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "edge",
              "master",
              "workers"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/zones/europe-west1-b/disks/edge"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T04:53:01.236-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/projetsparkantoineloic/zones/europe-west1-b/instances/edge",
            "instance_id": "1593429841944182850",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCl0mmC+V+mnlBSHoXnUDWyjg0ZCwjcrlqOs7MmJ4U0Glwj9u20PRB5nHWWPn4LWAmfEZxzCnKR/ASbaAGu7UpWxcbpVQdKZdD3+pz1Ro5T2UPdxN98obKTKXPOrt6KtbG7pN1OrtTKwv2RC+4dHjHlb83LQi0/4SXeOCWEZje0lPkM0OzZVhVBkVfvh123z2W/5r8XPc9Gu1PzxPa0in/RuC1W039jy9wPK5Aw1TCtTBxpnQQ26/+Ql9rcMJ32rZjDa8rTJ1WWb31yRvwgs6t0VQyLkyqC/oVGM+oP5fj4vKQxLFdUFKdyLMWczPZaLW8P8vNeYVax7VuWhHT0oaq5/qjGUi9+MPvyZtkhMgfSdwmqB4uBe1eQTGAVPASlWwAe7JEtXk0f+C7KGMbJiY+uDMUskAOQIobKNePHqIbwej [...]
            },
            "metadata_fingerprint": "lcpgNlNo0bI=",
            "name": "edge",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.140.99.146",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/networks/custom-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/regions/europe-west1/subnetworks/subnet-euw1",
                "subnetwork_project": "projetsparkantoineloic"
              }
            ],
            "project": "projetsparkantoineloic",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/zones/europe-west1-b/instances/edge",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "edge"
            ],
            "tags_fingerprint": "9IAlw1HFaW8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.custom_vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/zones/europe-west1-b/disks/master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T04:53:01.377-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/projetsparkantoineloic/zones/europe-west1-b/instances/master",
            "instance_id": "7395501776290906178",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCl0mmC+V+mnlBSHoXnUDWyjg0ZCwjcrlqOs7MmJ4U0Glwj9u20PRB5nHWWPn4LWAmfEZxzCnKR/ASbaAGu7UpWxcbpVQdKZdD3+pz1Ro5T2UPdxN98obKTKXPOrt6KtbG7pN1OrtTKwv2RC+4dHjHlb83LQi0/4SXeOCWEZje0lPkM0OzZVhVBkVfvh123z2W/5r8XPc9Gu1PzxPa0in/RuC1W039jy9wPK5Aw1TCtTBxpnQQ26/+Ql9rcMJ32rZjDa8rTJ1WWb31yRvwgs6t0VQyLkyqC/oVGM+oP5fj4vKQxLFdUFKdyLMWczPZaLW8P8vNeYVax7VuWhHT0oaq5/qjGUi9+MPvyZtkhMgfSdwmqB4uBe1eQTGAVPASlWwAe7JEtXk0f+C7KGMbJiY+uDMUskAOQIobKNePHqIbwej [...]
            },
            "metadata_fingerprint": "lcpgNlNo0bI=",
            "name": "master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "146.148.120.61",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/networks/custom-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/regions/europe-west1/subnetworks/subnet-euw1",
                "subnetwork_project": "projetsparkantoineloic"
              }
            ],
            "project": "projetsparkantoineloic",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/zones/europe-west1-b/instances/master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "master"
            ],
            "tags_fingerprint": "4y7qQ8dL1yM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.custom_vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/zones/europe-west1-b/disks/worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T04:53:01.341-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/projetsparkantoineloic/zones/europe-west1-b/instances/worker-1",
            "instance_id": "5018126589273505858",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCl0mmC+V+mnlBSHoXnUDWyjg0ZCwjcrlqOs7MmJ4U0Glwj9u20PRB5nHWWPn4LWAmfEZxzCnKR/ASbaAGu7UpWxcbpVQdKZdD3+pz1Ro5T2UPdxN98obKTKXPOrt6KtbG7pN1OrtTKwv2RC+4dHjHlb83LQi0/4SXeOCWEZje0lPkM0OzZVhVBkVfvh123z2W/5r8XPc9Gu1PzxPa0in/RuC1W039jy9wPK5Aw1TCtTBxpnQQ26/+Ql9rcMJ32rZjDa8rTJ1WWb31yRvwgs6t0VQyLkyqC/oVGM+oP5fj4vKQxLFdUFKdyLMWczPZaLW8P8vNeYVax7VuWhHT0oaq5/qjGUi9+MPvyZtkhMgfSdwmqB4uBe1eQTGAVPASlWwAe7JEtXk0f+C7KGMbJiY+uDMUskAOQIobKNePHqIbwej [...]
            },
            "metadata_fingerprint": "lcpgNlNo0bI=",
            "name": "worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.79.65.20",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/networks/custom-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/regions/europe-west1/subnetworks/subnet-euw1",
                "subnetwork_project": "projetsparkantoineloic"
              }
            ],
            "project": "projetsparkantoineloic",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/zones/europe-west1-b/instances/worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "workers"
            ],
            "tags_fingerprint": "DBBuiCe3Uo4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.custom_vpc",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20251209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/zones/europe-west1-b/disks/worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-11T04:53:01.722-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/projetsparkantoineloic/zones/europe-west1-b/instances/worker-2",
            "instance_id": "8173154576448815170",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCl0mmC+V+mnlBSHoXnUDWyjg0ZCwjcrlqOs7MmJ4U0Glwj9u20PRB5nHWWPn4LWAmfEZxzCnKR/ASbaAGu7UpWxcbpVQdKZdD3+pz1Ro5T2UPdxN98obKTKXPOrt6KtbG7pN1OrtTKwv2RC+4dHjHlb83LQi0/4SXeOCWEZje0lPkM0OzZVhVBkVfvh123z2W/5r8XPc9Gu1PzxPa0in/RuC1W039jy9wPK5Aw1TCtTBxpnQQ26/+Ql9rcMJ32rZjDa8rTJ1WWb31yRvwgs6t0VQyLkyqC/oVGM+oP5fj4vKQxLFdUFKdyLMWczPZaLW8P8vNeYVax7VuWhHT0oaq5/qjGUi9+MPvyZtkhMgfSdwmqB4uBe1eQTGAVPASlWwAe7JEtXk0f+C7KGMbJiY+uDMUskAOQIobKNePHqIbwej [...]
            },
            "metadata_fingerprint": "lcpgNlNo0bI=",
            "name": "worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.34.187.54",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/networks/custom-vpc",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/regions/europe-west1/subnetworks/subnet-euw1",
                "subnetwork_project": "projetsparkantoineloic"
              }
            ],
            "project": "projetsparkantoineloic",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/zones/europe-west1-b/instances/worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "workers"
            ],
            "tags_fingerprint": "DBBuiCe3Uo4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.custom_vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/projetsparkantoineloic/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3309916979239256175",
            "numeric_id": "3309916979239256175",
            "project": "projetsparkantoineloic",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/networks/custom-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-11T04:52:39.250-08:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/projetsparkantoineloic/regions/europe-west1/subnetworks/subnet-euw1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-euw1",
            "network": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "projetsparkantoineloic",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/projetsparkantoineloic/regions/europe-west1/subnetworks/subnet-euw1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8663643436539641976
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    }
  ]
}